# sodkat

./: Cargo.toml  README.md  setting.json  setting.toml  test.toml
examples/: colorpicker.rs  game.rs  simple.rs
src/: event.rs  lib.rs  setting.rs  sodkat.rs  win.rs
