[package]
name = "sodkat"
version = "0.1.0"
edition = "2021"

[lib]
name = "sodkat"
path = "src/lib.rs"

[dependencies]
crossbeam-channel = "0.5.14"
device_query = "2.1.0"
macroquad = "0.4.13"
nanoserde = {git="https://github.com/knickish/nanoserde",branch="v_0_2_cleanup", default-features=false, features = ["json"]}
once_cell = "1.20.2"
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
] }
